@@ -12,6 +12,7 @@ man_MANS = oprofile.1 opcontrol.1 opreport.1 opannotate.1 opgprof.1 op_help.1
 
 htmldir = $(prefix)/share/doc/oprofile
 dist_html_DATA = oprofile.html internals.html
+CLEANFILES=*.html
 
 if have_xsltproc
 
@@ -22,7 +23,8 @@ internals.html: ${top_srcdir}/doc/internals.xml
 	XML_CATALOG_FILES=$(XML_CATALOG_FILES) $(XSLTPROC) $(XSLTPROC_FLAGS) -o $@ --stringparam version @VERSION@ $(XHTML_STYLESHEET) $<
 
 # rules to generate oprofile.sf.net/doc files
-chunk: oprofile-chunk
+oc: oprofile-chunk
+ic: internals-chunk
 
 oprofile-chunk: ${top_srcdir}/doc/oprofile.xml
 	$(XSLTPROC) $(XSLTPROC_FLAGS) --stringparam version @VERSION@ $(CHUNK_XHTML_STYLESHEET) $<
