@@ -1,5 +1,11 @@
 2003-09-21  John Levon  <levon@movementarian.org>
 
+	* Makefile.am: make clean now removes *.html
+
+	* internals.xml: add some outline sections
+
+2003-09-21  John Levon  <levon@movementarian.org>
+
 	* doc/internals.xml: provide a short overview
 	and start a glossary
 
